--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,6 @@
         <div class="ui-loader-background"> </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/handlebars.js"></script>
-        <script type="text/javascript" src="js/script.js"></script>
+        <script type="text/javascript" src="js/script.js?rand=aaaa"></script>
     </body>
 </html>
