--- a/www/planificacion.html
+++ b/www/planificacion.html
@@ -1,15 +1,19 @@
 <ul id="unidades" data-role="listview">
-    <li><a href="23">Mock Up</a></li>
-    {{#.}}
-    {{#if this.unidadnombre}}
-    <li>
-    	<a href="{{this.unidadid}}">
-    		<h3>{{this.unidadnombre}}</h3>
-    		<p>
-    			
-    		</p>
+{{#.}}
+    {{#if this.nombre}}
+    <li class="unidad" data-icon="false">
+    	<a href="{{this.id}}" class="estado-utp-{{this.aprobacion_utp}}">
+    		<div class="col-80">
+              <h3>{{this.nombre}}</h3>
+    		  <p>
+    		      	{{this.sectorNombre}}
+    		  </p>
+            </div>
+            <div class="col-20">
+                <canvas id="radial-percentage-{{this.id}}" data-progress="90" width="80" height="80"></canvas>
+            </div>
     	</a>
     </li>
     {{/if}}
-    {{/.}}
+{{/.}}
 </ul>
