avances con la vista de unidad

--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -24,7 +24,7 @@
                     <li><a href="#" id="btn-logout"><i class="fa fa-sign-out"></i> Cerrar Sesi&oacute;n</a></li>
                 </ul>
             </div>
-            <div id="nav-header" data-role="header" data-position="fixed">
+            <div id="nav-header" data-role="header" data-position="fixed" class="hidden">
                 <a href="#" id="backButton"><i class="fa fa-angle-left"></i></a>
                 <h1 id="header-title">Web Class</h1>
                 <a href="#menu_lateral" class="ui-btn ui-btn-icon-notext ui-corner-all ui-btn-right" data-role="button" data-mini="true"><i class="fa fa-bars"></i></a>
