--- a/www/planificacion.html
+++ b/www/planificacion.html
@@ -2,7 +2,7 @@
 {{#.}}
     {{#if this.nombre}}
     <li class="unidad" data-icon="false">
-    	<a href="{{this.id}}" class="estado-utp-{{this.aprobacion_utp}}">
+    	<a href="#" id="{{this.id}}" class="estado-utp-{{this.aprobacion_utp}}">
     		<div class="col-80">
               <h3>{{this.nombre}}</h3>
     		  <p>
