--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -30,6 +30,7 @@
                 <a href="#menu_lateral" class="ui-btn ui-btn-icon-notext ui-corner-all ui-btn-right" data-role="button" data-mini="true"><i class="fa fa-bars"></i></a>
             </div>
             <div  id="contenido" data-role="content">
+                <img src="img/logoWC.png" width="100%">
             </div>
         </div>
         <div class="ui-loader-background"> </div>
