--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -29,7 +29,7 @@
                 <h1 id="header-title">Web Class</h1>
                 <a href="#menu_lateral" class="ui-btn ui-btn-icon-notext ui-corner-all ui-btn-right" data-role="button" data-mini="true"><i class="fa fa-bars"></i></a>
             </div>
-            <div  id="contenido" data-role="content">
+            <div  id="contenido" data-role="content" style="line-height:100%;">
                 <img src="img/logoWC.png" width="100%">
             </div>
         </div>
