--- a/www/mockup.html
+++ b/www/mockup.html
@@ -30,59 +30,45 @@
                 <a href="#menu_lateral" class="ui-btn ui-btn-icon-notext ui-corner-all ui-btn-right" data-role="button" data-mini="true"><i class="fa fa-bars"></i></a>
             </div>
             <div  id="contenido" data-role="content">
-                <form>
-                    <input id="filterPlanificacion" class="hide" type="hidden" data-role="search">
-                    <input class="filterPlanificacion" type="text" data-role="search">
-                    <select class="filterPlanificacion" name="sector">
-                        <option value=" ">Seleccione Asignatura</option>
-                        <option value="matematica">Matemática</option>
-                        <option value="castellano">Castellano</option>
-                    </select>
-                    <!--
-                    <select class="filterPlanificacion">
-                        <option value=""></option>
-                    </select>
-                    <select class="filterPlanificacion">
-                        <option value=""></option>
-                    </select>
-                    -->
-                </form>
-                <div class="clearfix"></div>
-                <ul id="unidades" data-role="listview" data-filter="true" data-filter-reveal="false" data-input='#filterPlanificacion'>
-                    <li class="unidad" data-icon="false">
-                        <a id="testId" href="#" class="estado-utp-1">
-                            <div class="col-80">
-                                <h2>dato 1</h2>
-                                <p class="details">
-                                    Matemática<br/>
-                                    4° Medio<br/>
-                                    01/01/2015 - 31/12/2015
-                                </p>
-                            </div>
-                            <div class="col-20">
-                                <canvas class="radialLoader" id="radial-percentage-1" data-progress="90" width="70" height="70"
-                                ></canvas>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="unidad" data-icon="false">
-                        <a id="testId" href="#" class="estado-utp-1">
-                            <div class="col-80">
-                                <h2>dedo</h2>
-                                <p class="details">
-                                    Matemática<br/>
-                                    3° Básico<br/>
-                                    01/01/2015 - 31/12/2015
-                                </p>
-                            </div>
-                            <div class="col-20">
-                                <canvas class="radialLoader" id="radial-percentage-1" data-progress="90" width="70" height="70"
-                                ></canvas>
-                            </div>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+                <div class="viewContainer">
+                    <fieldset>
+                        <div class="padding1em">
+                            <table data-role="table" class="ui-responsive ui-shadow" id="gk-5299A7V" is="jqm-table">
+                                <thead>
+                                    <tr>
+                                        <th data-priority="1">Código</th>
+                                        <th data-priority="1">Nivel</th>
+                                        <th data-priority="1">Asignatura</th>
+                                        <th data-priority="1">Validado Por</th>
+                                        <th data-priority="1">Autor</th>
+                                        <th data-priority="1">Clases</th>
+                                        <th data-priority="1">Horas</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>3396391</td>
+                                        <td>4° Medio</td>
+                                        <td>Matmática</td>
+                                        <td></td>
+                                        <td>Pablo Garín</td>
+                                        <td>56</td>
+                                        <td>112</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </fieldset>
+                    <div class="clearfix"></div>
+                    <ul id="clases" data-role="listview" data-inset="false">
+                        <li>
+                            <a href="#">
+                                <h3>1. Primera Clase</h3>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>    
         </div>
         <script type="text/javascript" src="js/script.js"></script>
     </body>
