--- a/www/index.html
+++ b/www/index.html
@@ -29,8 +29,12 @@
                 <h1 id="header-title">Web Class</h1>
                 <a href="#menu_lateral" class="ui-btn ui-btn-icon-notext ui-corner-all ui-btn-right" data-role="button" data-mini="true"><i class="fa fa-bars"></i></a>
             </div>
-            <div  id="contenido" data-role="content" style="line-height:100%;">
-                <img src="img/logoWC.png" width="100%">
+            <div  id="contenido" data-role="content">
+                <div id="logoSplash" class="logo">
+                    <div class="reset" style="position:relative; top:60%; width:180%; margin:0 auto 0 -40%">
+                        <i class="fa fa-spinner fa-pulse fa-2x"></i>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="ui-loader-background"> </div>
