--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -8,7 +8,7 @@
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height" />
         <link rel="stylesheet" href="css/font-awesome.min.css" />
-        <!--<link rel="stylesheet" href="css/themes/default/jquery.mobile-1.4.5.min.css">-->
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile.flatui.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <script src="js/jquery.js"></script>
@@ -16,7 +16,7 @@
         <title>WebClass</title>
     </head>
     <body>
-        <div data-role="page" data-theme="a">
+        <div id="document-page" data-role="page" data-theme="a">
             <div data-role="panel" id="menu_lateral" data-position="right" data-display="push" data-position-fixed="true">
                 <ul data-role="listview">
                     <li><a href="#" data-transition="slide" class="menuItem" template="home"><i class="fa fa-home"></i> Home</a></li>
@@ -24,7 +24,7 @@
                     <li><a href="#" id="btn-logout"><i class="fa fa-sign-out"></i> Cerrar Sesi&oacute;n</a></li>
                 </ul>
             </div>
-            <div id="nav-header" data-role="header" data-position="fixed" class="hidden">
+            <div id="nav-header" data-role="header" data-position="fixed" class="">
                 <a href="#" id="backButton"><i class="fa fa-angle-left"></i></a>
                 <h1 id="header-title">Web Class</h1>
                 <a href="#menu_lateral" class="ui-btn ui-btn-icon-notext ui-corner-all ui-btn-right" data-role="button" data-mini="true"><i class="fa fa-bars"></i></a>
