--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -21,6 +21,7 @@
                 <ul data-role="listview">
                     <li><a href="#" data-transition="slide" class="menuItem" template="home"><i class="fa fa-home"></i> Home</a></li>
                     <li><a href="#" data-transition="slide" class="menuItem" template="planificacion"><i class="fa fa-calendar"></i> Planificación</a></li>
+                    <li><a href="#" data-transition="slide" class="menuItem" template="asistencia"><i class="fa fa-users"></i> Asistencia</a></li>
                     <li><a href="#" id="btn-logout"><i class="fa fa-sign-out"></i> Cerrar Sesi&oacute;n</a></li>
                 </ul>
             </div>
