--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
                     <li><a href="#" id="btn-logout"><i class="fa fa-sign-out"></i> Cerrar Sesi&oacute;n</a></li>
                 </ul>
             </div>
-            <div id="nav-header" data-role="header" data-position="fixed" class="ui-bar">
+            <div id="nav-header" data-role="header" data-position="fixed" data-tap-toggle="false" class="ui-bar">
                 <span id="backButton" class="fa-stack">
                     <i class="fa fa-circle-o fa-stack-2x"></i>
                     <i class="fa fa-arrow-left fa-stack-1x"></i>
